# Avian

./: .gitignore  CMakeLists.txt  README.md  SECURITY.md  build.properties
.github/: PULL_REQUEST_TEMPLATE.md  ci-test-each-commit-exec.py
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  good_first_issue.yml  gui_issue.yml
.github/workflows/: c-cpp.yml  ci.yml  depends.yml
.tx/: config
ci/: lint_imagefile
ci/lint/: 06_script.sh  container-entrypoint.sh
ci/test/: 00_setup_env_arm.sh  00_setup_env_i686_no_ipc.sh  (+19 more)
cmake/: windows-app.manifest.in
doc/: translation_process.md
share/: setup.nsi.in
src/: CMakeLists.txt  addressindex.h  addresstype.cpp  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-res.rc  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-util-res.rc  bitcoin-util.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoin.cpp  bitcoind-res.rc  bitcoind.cpp  blockencodings.h  chain.cpp  chain.h  clientversion.cpp  clientversion.h  core_io.h  core_read.cpp  core_write.cpp  founder_payment.cpp  founder_payment.h  init.cpp  net_processing.cpp  outputtype.h  pow.cpp  pow.h  protocol.cpp  protocol.h  spentindex.h  timestampindex.h  txdb.cpp  txmempool.cpp  txmempool.h  uint256.h  unordered_lru_cache.h  validation.cpp  (+3 more)
src/assets/: CMakeLists.txt  LibBoolEE.cpp  LibBoolEE.h  ans.cpp  ans.h  assetdb.cpp  assetdb.h  assets.cpp  assets.h  assetsnapshotdb.cpp  assetsnapshotdb.h  assettypes.cpp  assettypes.h  messages.cpp  messages.h  myassetsdb.cpp  myassetsdb.h  restricteddb.cpp  restricteddb.h  rewards.cpp  rewards.h  snapshotrequestdb.cpp  snapshotrequestdb.h
(+258 files in other folders)
